--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-dompdf": "^0.8.5",
+        "consoletvs/charts": "^6.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "5.8",
+        "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^5.3",
+        "spatie/laravel-permission": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
