--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Erp\\": "app/"
+            "iteos\\": "app/"
         },
         "classmap": [
             "database/seeds",
